--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "gsap": "^3.12.7",
     "mongoose": "^8.13.2",
     "next": "15.2.5",
     "react": "^19.0.0",
