--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.13.2",
     "next": "15.2.5",
     "nodemailer": "^6.10.1",
