--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mime-types": "^3.0.1",
     "mongoose": "^8.13.2",
     "next": "15.2.5",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
